--- a/dna/workdir/dna.yaml
+++ b/dna/workdir/dna.yaml
@@ -6,4 +6,6 @@ properties: ~
 zomes: 
   - name: career
     bundled: ../../target/wasm32-unknown-unknown/release/career.wasm
+  - name: board
+    bundled: ../../target/wasm32-unknown-unknown/release/board.wasm
 
